--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "fieldlet",
+  "name": "formlet",
   "version": "0.0.1",
   "authors": [
     "M. George Hansen <technopolitica@gmail.com>"
